--- a/chatapp/templates/oneplace/index.html
+++ b/chatapp/templates/oneplace/index.html
@@ -1,5 +1,5 @@
 {% extends "oneplace/base.html" %}
-    {% block title %}I'llReport Index{% endblock title %}
+    {% block title %}Oneplace Index{% endblock title %}
 
     {% block body %}
         {% if user.is_authenticated %}
