--- a/chatapp/templates/oneplace/navbar.html
+++ b/chatapp/templates/oneplace/navbar.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">I'll Report</a>
+    <a class="navbar-brand" href="#">OnePlace</a>
 </nav>
 <div class="row m-3"></div>
